# days-python

p00/ex1/: ft_plot_area.py
p00/ex2/: ft_harvest_total.py
p00/ex3/: ft_plant_age.py
p00/ex4/: ft_water_reminder.py
p00/ex5/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py  ft_count_hervest_iterative.py
p00/ex6/: ft_garden_summary.py
p00/ex7/: ft_seed_inventory.py
p01/ex0/: ft_garden_intro.py
p01/ex1/: ft_garden_data.py
p01/ex2/: ft_plant_growth.py
p01/ex3/: ft_plant_factory.py
p01/ex4/: ft_garden_security.py
p01/ex5/: ft_plant_types.py
p01/ex6/: ft_garden_analytics.py
p02/ex0/: ft_first_exception.py
p02/ex1/: ft_different_errors.py  ft_raise_exception.py
p02/ex2/: ft_custom_errors.py  ft_different_errors.py
p02/ex3/: ft_custom_errors.py  ft_finally_block.py
p02/ex4/: ft_finally_block.py  ft_raise_errors.py
p02/ex5/: ft_garden_management.py
p03/ex0/: ft_command_quest.py
p03/ex1/: ft_score_analytics.py
p03/ex2/: ft_coordinate_system.py
p03/ex3/: ft_achievement_tracker.py
p03/ex4/: ft_inventory_system.py
p03/ex5/: ft_data_stream.py
p03/ex6/: ft_analytics_dashboard.py  ft_data_alchemist.py
p06/: ft_circular_curse.py  ft_import_transmutation.py  ft_pathway_debate.py  ft_sacred_scroll.py
p06_new/: ft_alembic_0.py  ft_alembic_1.py  ft_alembic_2.py  ft_alembic_3.py  ft_alembic_4.py  ft_distillation_0.py  ft_kaboom_0.py  ft_kaboom_1.py  ft_transmutation_0.py  ft_transmutation_1.py
p07_new/: battle.py  capacitor.py  tournament.py
p08/ex1/: loading.py  pyproject.toml
test p04/: sample_data.json
(+52 files in other folders)
