[project]
name = "loading"
version = "0.1.0"
description = "Matrix data analysis"
authors = [
    {name = "elocufie"}
]
requires-python = "^3.10"
dependencies = [
    "pandas (<2.0.0)",
    "matplotlib (>=3.10.9,<4.0.0)",
    "numpy (<2.0.0)",
    "requests (2.31.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
